crates/weft-snapshots/tests/snapshots/solid-jsx/example-tabs.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-tabs as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _busy(state) {
  return state === "loading" || state === "busy" || state === "submitting" ? "true" : undefined;
}

function _tabKey(e, i, count, choose) {
  const step = e.key === "ArrowRight" ? 1 : e.key === "ArrowLeft" ? -1 : 0;
  if (step === 0 || count === 0) return;
  e.preventDefault();
  const next = (i + step + count) % count;
  choose(next);
  e.currentTarget.parentElement?.querySelectorAll('[role="tab"]')[next]?.focus();
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Account">
      {(() => {
        const _t = [
          { id: "tab-profile", doc: "tab-profile", state: "", label: "Profile", panel: (
            <>
              <div data-weft-id="profile-text">Your public details.</div>
            </>
          ) },
          { id: "tab-security", doc: "tab-security", state: "", label: "Security", panel: (
            <>
              <div data-weft-id="security-text">Password and sessions.</div>
            </>
          ) },
        ];
        const _s = Math.max(0, _t.findIndex((_x) => _x.doc === _text(props.data?.tab) || _x.id === _text(props.data?.tab)));
        const _choose = (_k) => { const _x = _t[_k]; if (!_x || _k === _s) return; props.onChange?.("$.tab", _x.doc); _act(props.actions, { id: "account-tabs", action: "tabs.change" }); };
        return (
          <div data-weft-tabs="">
            <div data-weft-id="account-tabs" role="tablist">
              {_t.map((_x, _k) => (
                <button data-weft-id={_x.id || undefined} data-state={_x.state || undefined} aria-busy={_busy(_x.state)} type="button" role="tab" id={"weft-" + _x.id + "-tab"} aria-selected={String(_k === _s)} aria-controls={"weft-" + _x.id + "-panel"} tabindex={_k === _s ? 0 : -1} onClick={() => _choose(_k)} onKeyDown={(_e) => _tabKey(_e, _k, _t.length, _choose)}>
                  {_x.label}
                </button>
              ))}
            </div>
            {_t.map((_x, _k) => (
              <div role="tabpanel" id={"weft-" + _x.id + "-panel"} aria-labelledby={"weft-" + _x.id + "-tab"} hidden={_k !== _s} tabindex={0}>
                {_x.panel}
              </div>
            ))}
          </div>
        );
      })()}
    </main>
  );
}
